2001-06-13  Joe Shaw  <joe@ximian.com>

	* src/soup-core/soup-socket.c (soup_address_new): If SOUP_SYNC_DNS is
	in the user's environment, use an old fashioned synchronous DNS lookup
	on UNIX.

2001-06-07  Joe Shaw  <joe@ximian.com>

	* src/soup-core/soup-message.c (soup_message_redirect): Change
	msg->priv->flags to msg->priv->msg_flags so it'll build again.
	(soup_message_run_handlers): Add a default case to the switch
	statement (for RESPONSE_BODY_HANDLER) to squash a warning.

2001-06-07  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-message.c (soup_message_run_handlers): Stop
	processing if a handler requeues the message.

	* src/soup-core/soup-queue.c (soup_process_headers): Allow a
	handler to requeue the message without having any more handlers or
	callbacks called.
	(soup_finish_read): ditto.
	(soup_queue_read_cb): ditto.

	* src/soup-core/soup-message.c (soup_message_redirect): Requeue
	message based on Location header, if response status code is 300,
	301, 302, 303, or 305.
	(soup_message_set_flags): If SOUP_MESSAGE_FOLLOW_REDIRECT is set,
	add a header handler (on Location) which calls
	soup_message_redirect ().

2001-06-06  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-message.c (soup_message_add_header_handler):
	implement.
	(soup_message_add_response_code_handler): ditto.
	(soup_message_add_body_handler): ditto.
	(soup_message_run_handlers): uh-huh.
	(soup_message_free): Free allocated handler info.

	* src/soup-core/soup-message.h: Change SOUP_MESSAGE_PROCESS_CHUNKS
	to SOUP_MESSAGE_OVERWRITE_CHUNKS. This will allow large files to
	be processed using a BODY_CHUNK handler, instead of keeping
	everything in memory.

	* src/soup-core/soup-queue.c (soup_process_headers): Run PRE_BODY
	handlers.
	(soup_finish_read): Run POST_BODY handlers.
	(soup_queue_read_cb): Run BODY_CHUNK handlers.

2001-06-06  Joe Shaw  <joe@ximian.com>

	* src/soup-core/soup-message.c (soup_message_set_method,